# cargo-async-doctor

./: BUILD.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: release.md
fixtures/: README.md
fixtures/phase2/blocking-sleep-negative/: Cargo.toml
fixtures/phase2/blocking-sleep-negative/src/: main.rs
fixtures/phase2/blocking-sleep-positive/: Cargo.toml
fixtures/phase2/blocking-sleep-positive/src/: main.rs
fixtures/phase2/blocking-std-api-negative/: Cargo.toml
fixtures/phase2/blocking-std-api-negative/src/: main.rs
fixtures/phase2/blocking-std-api-positive/: Cargo.toml
fixtures/phase2/blocking-std-api-positive/src/: main.rs
fixtures/phase2/sync-async-bridge-negative/: Cargo.toml
fixtures/phase2/sync-async-bridge-negative/src/: main.rs
fixtures/phase2/sync-async-bridge-positive/: Cargo.toml
fixtures/phase2/sync-async-bridge-positive/src/: main.rs
fixtures/phase4/virtual-workspace/: Cargo.toml
fixtures/phase4/virtual-workspace/default-member/: Cargo.toml
fixtures/phase4/workspace-root-package/: Cargo.toml
fixtures/phase4/workspace-root-package/src/: main.rs
fixtures/phase5/custom-target-path/: Cargo.toml
fixtures/phase5/nested-inline-module-alias-leakage/: Cargo.toml
fixtures/phase5/uncompiled-src-file/: Cargo.toml
fixtures/phase6/cfg-reachability/: Cargo.toml
fixtures/phase6/nested-inline-path-attribute/: Cargo.toml
fixtures/placeholder/minimal-bin/: Cargo.toml
src/: analysis.rs  cli.rs  diagnostics.rs  explain.rs  lib.rs  main.rs  render.rs  scan.rs
tests/: fixtures.rs
tests/support/: mod.rs
(+15 files in other folders)
