[package]
name = "cargo-async-doctor"
version = "0.1.0"
edition = "2021"
description = "Cargo subcommand skeleton for diagnosing common async Rust hazards"
license = "MIT"
readme = "README.md"
repository = "https://github.com/dunamismax/cargo-async-doctor"
keywords = ["cargo", "async", "tokio", "diagnostics", "cli"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
