[package]
name = "cargo-async-doctor"
version = "0.1.2"
edition = "2021"
description = "Cargo subcommand for diagnosing common async Rust hazards"
authors = ["Stephen Sawyer"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dunamismax/cargo-async-doctor"
homepage = "https://github.com/dunamismax/cargo-async-doctor"
documentation = "https://docs.rs/cargo-async-doctor"
keywords = ["cargo", "async", "tokio", "diagnostics", "cli"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
exclude = ["/.github", "/.gitignore"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
